--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "grunt-contrib-jshint": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-contrib-less": "^0.11.0",
-    "grunt-contrib-uglify": "^0.4.0"
+    "grunt-contrib-uglify": "^0.4.0",
+    "grunt-concurrent": "^0.5.0"
   }
 }
