--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-contrib-less": "^0.11.0",
     "grunt-contrib-uglify": "^0.4.0",
-    "grunt-concurrent": "^0.5.0"
+    "grunt-concurrent": "^0.5.0",
+    "nodemon": "^1.0.17",
+    "grunt-nodemon": "^0.2.1"
   }
 }
